<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instance_methods_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/instance_methods_description"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <EditText
        android:id="@+id/instance_methods_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/profile_name_input"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/instance_methods_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/instance_methods_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/text_result"
        android:inputType="none" />

</LinearLayout>