<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/defaults_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/defaults_source" />

    <Button
        android:id="@+id/defaults_submit"
        style="@style/AppTheme.ShowCaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaults_retrieve" />

    <TextView
        android:id="@+id/defaults_text"
        style="@style/AppTheme.ShowCaseResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_result" />

    <TextView
        android:id="@+id/defaults_expected_value"
        style="@style/AppTheme.ShowCaseResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaults_expectedValues" />

</LinearLayout>