<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.here.hello.activity.TabFragmentBase">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
      android:id="@+id/plain_old_data_spinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:entries="@array/plain_old_data_methods"/>

    <TextView
      android:id="@+id/plain_old_data_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/fab_margin"
      android:layout_marginBottom="@dimen/fab_margin"
      android:textAppearance="@style/TextAppearance.AppCompat" />

    <EditText
      android:id="@+id/plain_old_data_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/parameter_value"
      android:inputType="none" />

    <Button
      android:id="@+id/plain_old_data_submit_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/submit" />

    <EditText
      android:id="@+id/plain_old_data_result"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/text_result"
      android:inputType="none"
      android:focusable="false"
      android:clickable="false"/>

  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
