<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/listeners_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/listeners_methods" />

    <LinearLayout
        style="@style/AppTheme.ShowCaseElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_java_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/register_java_listener"
            android:textSize="@dimen/small_button_text_size" />

        <Button
            android:id="@+id/unregister_java_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/unregister_java_listener"
            android:textSize="@dimen/small_button_text_size" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.ShowCaseElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_native_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/register_native_listener"
            android:textSize="@dimen/small_button_text_size" />

        <Button
            android:id="@+id/unregister_native_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/unregister_native_listener"
            android:textSize="@dimen/small_button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/listeners_start_label"
            style="@style/AppTheme.ShowCaseElement"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Position start"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/listeners_start_x"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="x"
            android:text="0" />


        <EditText
            android:id="@+id/listeners_start_y"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="y"
            android:text="0" />


        <EditText
            android:id="@+id/listeners_start_z"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="z"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/listeners_end_label"
            style="@style/AppTheme.ShowCaseElement"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Position end"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/listeners_end_x"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="x"
            android:text="1000" />

        <EditText
            android:id="@+id/listeners_end_y"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="y"
            android:text="1000" />

        <EditText
            android:id="@+id/listeners_end_z"
            style="@style/AppTheme.ShowCaseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="z"
            android:text="1000" />

    </LinearLayout>

    <Button
        android:id="@+id/listeners_submit_button"
        style="@style/AppTheme.ShowCaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/listeners_result"
        style="@style/AppTheme.ShowCaseResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_result" />

</LinearLayout>